# evalgen-poc

./: README.md  pyproject.toml
data/: election_demo.jsonl
poc/: notebook.ipynb
