[tool.poetry]
name = "evalgen-poc"
version = "0.1.0"
description = ""
authors = ["R. Miles McCain <github@sendmiles.email>"]
readme = "README.md"
packages = [{include = "evalgen_poc"}]

[tool.poetry.dependencies]
python = "^3.11"
openai = "^1.12.0"
numpy = "^1.26.4"
matplotlib = "^3.8.3"
python-dotenv = "^1.0.1"
tqdm = "^4.66.2"

[tool.poetry.group.dev.dependencies]
black = "^24.2.0"
isort = "^5.13.2"
pytest = "^8.0.2"
ipykernel = "^6.29.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
